--- a/templates/base.html
+++ b/templates/base.html
@@ -55,8 +55,8 @@
     {% block content %}{% endblock %}
 
     <div class="row mt-4">
-        <div class="col-md text-center text-md-start mb-3">{% translate 'All rights reserved' %} &copy; DPanel  - {% now 'Y' %}</div>
-        <div class="col-md text-center text-md-end"><b>DPanel 2.0</b> With <i class="bi bi-heart-fill text-danger"></i> by <a href="https://de-ver.com" class="fw-bold" target="_blank">Dever</a> </div>
+        <div class="col-md text-center text-md-start mb-3">{% translate 'All rights reserved' %} &copy; <a href="https://dpanel.de-ver.com" class="fw-bold" target="_blank">DPanel</a>  - {% now 'Y' %}</div>
+        <div class="col-md text-center text-md-end"><b><a href="https://dpanel.de-ver.com" class="fw-bold" target="_blank">DPanel</a> 2.0</b> With <i class="bi bi-heart-fill text-danger"></i> by <a href="https://de-ver.com" class="fw-bold" target="_blank">Dever</a> </div>
     </div>
 </div>
 
