--- a/templates/inc/scripts.html
+++ b/templates/inc/scripts.html
@@ -14,15 +14,15 @@
         }).then((result) => {
             if (result.isConfirmed) {
                 jQuery('.loading-preloader').show();
-                location.href = u
+                location.href = u;
             }else if(result.isDenied) {
-                return false
+                return false;
             }
         });
     }
 
-    function copy_this(text){
-        navigator.clipboard.writeText(text);
+    function copy_this(value, message=false){
+        navigator.clipboard.writeText(value);
         const Toast = Swal.mixin({
               toast: true,
               position: 'top',
@@ -37,7 +37,8 @@
 
         Toast.fire({
           icon: 'success',
-          title: '{% trans "Text copied" %}'
+          title: '{% trans "Copied" %}',
+          text: message,
         });
     }
 
@@ -53,4 +54,91 @@
     jQuery('.preloader-form').submit(function(e){
         jQuery('.loading-preloader').show();
     });
+</script>
+
+<script>
+    jQuery('body').on('click', '#check-update', function(){
+        jQuery('.loading-preloader').show();
+        $.getJSON('https://dpanel.de-ver.com/api/update/check', function(data){
+            if(data.version > 20){
+                Swal.fire({
+                    title: '{% trans "New version available" %}',
+                    text: '{% trans "Please carefully before updating? please take a backup first" %}',
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: '{% trans 'Update' %}',
+                    cancelButtonText: '{% trans 'Cancel' %}',
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        jQuery('.loading-preloader').show();
+                        jQuery.ajax({
+                            url: '{% url 'dpanel_update' %}',
+                            type: 'POST',
+                            dataType: 'json',
+                            data: {
+                                csrfmiddlewaretoken: '{{csrf_token}}',
+                            },
+                            success: function(data){
+                                jQuery('.loading-preloader').hide();
+                                Swal.fire({
+                                    title: '{% trans "Update successful" %}',
+                                    icon: 'success',
+                                    showCancelButton: false,
+                                    confirmButtonColor: '#3085d6',
+                                    confirmButtonText: '{% trans "Ok" %}',
+                                    allowOutsideClick: false,
+                                }).then((result) => {
+                                    if (result.isConfirmed) {
+                                        window.location.reload();
+                                    }
+                                });
+                            },
+                            error: function(data) {
+                                jQuery('.loading-preloader').hide();
+                                Swal.fire({
+                                    title: '{% trans "Error when updating" %}',
+                                    text: data.message,
+                                    icon: 'error',
+                                    showCancelButton: false,
+                                    confirmButtonColor: '#3085d6',
+                                    confirmButtonText: '{% trans "Ok" %}',
+                                });
+                            },
+                        });
+                    }
+                });
+            }else if(data.version == 20){
+                Swal.fire({
+                    title: '{% trans "You are using the latest version" %}',
+                    icon: 'success',
+                    showCancelButton: false,
+                    confirmButtonColor: '#3085d6',
+                    confirmButtonText: '{% trans "Ok" %}',
+                });
+            }else{
+                Swal.fire({
+                    title: '{% trans "Error occurred. Please try again later" %}',
+                    icon: 'error',
+                    showCancelButton: false,
+                    confirmButtonColor: '#3085d6',
+                    confirmButtonText: '{% trans "Ok" %}',
+                });
+            }
+        })
+        .fail(function(jqXHR, textStatus, errorThrown) {
+            jQuery('.loading-preloader').hide();
+            Swal.fire({
+                title: '{% trans "Error occurred. Please try again later" %}',
+                icon: 'error',
+                showCancelButton: false,
+                confirmButtonColor: '#3085d6',
+                confirmButtonText: '{% trans "Ok" %}',
+            });
+        });
+        jQuery('.loading-preloader').hide();
+    });
+
+
 </script>
