--- a/templates/app/list.html
+++ b/templates/app/list.html
@@ -14,7 +14,7 @@
         </thead>
         <tbody>
             {% for app in apps %}
-            <tr>
+            <tr class="align-middle">
                 <td>
                     {% if apps.start_index %}
                     {{apps.start_index|add:forloop.counter0}}
@@ -31,43 +31,54 @@
                 <td>{{app.port}}</td>
                 <td>
                     <div class="input-group input-group-sm">
-                        <button type="button" class="btn btn-warning rounded-start-pill" onclick="jQuery(this).parents('.input-group').find('input').select();copy_this('source {{app.venv_path}}/bin/activate && cd {{app.www_path}}','{% trans 'Paste the command in the terminal to activate virtual environment of this app' %}')" data-bs-toggle="tooltip" data-bs-placement="top" title="{% trans 'Terminal environment command' %}">
-                            <i class="bi bi-terminal"></i>
-                        </button>
-                        <input type="text" class="form-control form-control-sm" value="source {{app.venv_path}}/bin/activate && cd {{app.www_path}}" readonly dir="ltr">
-                        <a href="{% url 'app_files' app.serial %}" class="btn btn-danger rounded-end-pill" data-bs-toggle="tooltip" title="{% trans 'File manager' %}" target="_blank">
-                            <i class="bi bi-folder"></i>
-                        </a>
+                        <input type="text" class="form-control rounded-start-pill" value="source {{app.venv_path}}/bin/activate && cd {{app.www_path}}" readonly dir="ltr">
+                        <div class="input-group-text dropdown rounded-end-pill">
+                            <i class="bi bi-three-dots-vertical pointer" data-bs-toggle="dropdown"></i>
+                            <ul class="dropdown-menu">
+                               <li>
+                                   <span class="dropdown-item pointer" onclick="jQuery(this).parents('.input-group').find('input').select();copy_this('source {{app.venv_path}}/bin/activate && cd {{app.www_path}}','{% trans 'Paste the command in the terminal to activate virtual environment of this app' %}')">
+                                       <i class="bi bi-terminal float-end text-secondary"></i>
+                                       {% trans 'Venv command' %}
+                                    </span>
+                               </li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li>
+                                    <a href="{% url 'app_files' app.serial %}" class="dropdown-item" target="_blank">
+                                        <i class="bi bi-folder float-end text-success"></i>
+                                        {% trans 'File manager' %}
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </td>
                 <td>
-                    <a href="{% url 'app_certificates' app.serial %}" class="btn btn-{% if app.certificate_app.all %}success{% else %}light border{% endif %} btn-sm rounded-pill">
+                    <a href="{% url 'app_certificates' app.serial %}" class="btn btn-{% if app.certificate_app.all %}success{% else %}light border{% endif %} btn-sm rounded-pill" data-bs-toggle="tooltip" title="{% if app.certificate_app.all %}{% trans 'Installed' %}{% else %}{% trans 'Not installed' %}{% endif %}">
                         <i class="bi bi-shield"></i>
-                        {% if app.certificate_app.all %}{% trans 'Installed' %}{% else %}{% trans 'Not installed' %}{% endif %}
                     </a>
                 </td>
-                <td>
-                    <div class="dropdown">
-                        <i class="bi bi-three-dots-vertical pointer float-end" id="dropdownMenu-{{forloop.counter}}"
-                                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        </i>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenu-{{forloop.counter}}">
+                <td class="float-end">
+                    {% if app.is_active %}
+                    <a href="{% url 'app_status' app.serial %}" class="text-danger" data-bs-toggle="tooltip" title="{% trans 'Stop' %}">
+                        <i class="bi bi-stop-circle fs-4"></i>
+                    </a>
+                    {% else %}
+                    <a href="{% url 'app_status' app.serial %}" class="text-success" data-bs-toggle="tooltip" title="{% trans 'Start' %}">
+                        <i class="bi bi-play-circle fs-4"></i>
+                    </a>
+                    {% endif %}
+                    <div class="dropdown d-inline ms-1">
+                        <i class="bi bi-gear fs-4 pointer" data-bs-toggle="dropdown"></i>
+                        <ul class="dropdown-menu dropdown-menu-end">
                             <li>
                                 <a class="dropdown-item" href="{% url 'app_config' app.serial %}" target="_blank">
                                     {% trans 'Configuration' %}
-                                    <i class="bi bi-gear-fill float-end"></i>
+                                    <i class="bi bi-hdd-network float-end"></i>
                                 </a>
                             </li>
                             <li><hr class="dropdown-divider"></li>
                             <li>
-                                <a class="dropdown-item" href="{% url 'app_files' app.serial %}"  target="_blank">
-                                    {% trans 'Manage files' %}
-                                    <i class="bi bi-folder float-end"></i>
-                                </a>
-                            </li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li>
-                                <span class="dropdown-item pointer" onclick="open_link_confirm('{% url 'app_restart' app.serial %}')">
+                                <span class="dropdown-item pointer" onclick="open_link_confirm('{% url 'app_restart' app.serial %}', '{% trans 'Restart app' %}', '{% trans 'Do you want to restart this app    ?' %}')">
                                     {% trans 'Restart' %}
                                     <i class="bi bi-arrow-clockwise float-end"></i>
                                 </span>
