--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,10 @@
     {% if messages %}
     <div class="messages">
         {% for message in messages %}
-        <div class="alert alert-{{ message.tags }}" role="alert">{{ message|safe }}</div>
+        <div class="alert alert-{{ message.tags }}" role="alert">
+            {{ message|safe }}
+            <button type="button" class="btn-close fs-6 float-end" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
         {% endfor %}
     </div>
     {% endif %}
