--- a/templates/mysql/list.html
+++ b/templates/mysql/list.html
@@ -8,7 +8,7 @@
             <th style="width: 0">#</th>
             <th>{% translate 'Name' %}</th>
             <th>{% translate 'User' %}</th>
-            <th class="database-action-btn pointer w-75 text-danger">{% translate 'Actions' %}</th>
+            <th>{% translate 'Password' %}</th>
             <th></th>
         </tr>
         </thead>
@@ -16,13 +16,21 @@
             {% for database in databases %}
             <tr class="database-{{database.serial}}">
                 <td>
+                    <form class="d-none" method="post" action="{% url 'mysql_backup_import' database.serial %}" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <input type="file" name="sql_file" id="backup-import-{{database.serial}}" class="backup-import" accept=".sql,.sql.gz" required hidden>
+                    </form>
                     {% if databases.start_index %}
                     {{databases.start_index|add:forloop.counter0}}
                     {% else %}
                     {{forloop.counter}}
                     {% endif %}
                 </td>
-                <td>{{database.name}}</td>
+                <td>
+                    <a href="{% url 'mysql_database' database.serial %}" class="fw-bold">
+                        {{database.name}}
+                    </a>
+                </td>
                 <td>{{database.username}}</td>
                 <td>
                     <div class="blur-group input-group input-group-sm">
@@ -34,35 +42,25 @@
                             <i class="bi bi-clipboard"></i>
                         </button>
                     </div>
-                    <div class="import-from" style="display: none">
-                        <form action="{% url 'mysql_database_import' database.serial %}" method="POST" enctype="multipart/form-data">
-                            {% csrf_token %}
-                            <div class="input-group input-group-sm">
-                                <input type="file" name="sql_file" class="form-control rounded-start-pill" accept=".sql, .sql.gz" required>
-                                <button type="submit" class="btn btn-warning rounded-end-pill">
-                                    {% translate 'Import' %}
-                                    <i class="bi bi-upload"></i>
-                                </button>
-                            </div>
-                        </form>
-                    </div>
                 </td>
                 <td>
                     <div class="dropdown">
                         <i class="bi bi-three-dots-vertical float-end pointer" data-bs-toggle="dropdown"></i>
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li>
-                               <a href="{% url 'mysql_database_export' database.serial %}" class="dropdown-item" target="_blank">
-                                    {% trans 'Export' %}
-                                    <i class="bi bi-download float-end"></i>
+                                <a class="dropdown-item pointer" href="{% url 'mysql_database' database.serial %}">
+                                    <i class="bi bi-info-circle float-end"></i>
+                                    {% trans 'Details' %}
                                 </a>
                             </li>
+                            <li><div class="dropdown-divider"></div></li>
                             <li>
-                                <span class="dropdown-item pointer" onclick="open_link_confirm('{% url 'mysql_database_password_change' database.serial %}', title='{{database.username}}', text='{% trans 'Do you want to change password for this user?' %}')">
+                                <span class="dropdown-item pointer" onclick="open_link_confirm('{% url 'mysql_database_password_change' database.serial %}', '{% trans 'User' %}: {{database.username}}', '{% trans 'Do you want to change password for this database user?' %}')">
                                     {% trans 'Password' %}
                                     <i class="bi bi-arrow-clockwise float-end"></i>
                                 </span>
                             </li>
+                            <li><div class="dropdown-divider"></div></li>
                             <li>
                                 <span class="dropdown-item pointer text-danger" onclick="open_link_confirm('{% url 'mysql_database_delete' database.serial %}')">
                                     {% trans 'Delete' %}
