--- a/templates/mysql/new.html
+++ b/templates/mysql/new.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="w-100">
+<div class="bg-white shadow-sm rounded p-3">
     <form class="row" method="post" enctype="multipart/form-data" >
         {% csrf_token %}
         {% include 'inc/form.html'%}
